src/objects/SocialMediaSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It stores all settings for Sprinklr integration</description>
    <fields>
        <fullName>Brand__c</fullName>
        <inlineHelpText>Leave empty if Unknown</inlineHelpText>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Leave empty if unknown</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_Type__c</fullName>
        <description>Social network Name</description>
        <inlineHelpText>Name of the Social Network. Ex: Facebook, Twitter,...</inlineHelpText>
        <label>SN Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_Unique_Id__c</fullName>
        <inlineHelpText>Unique identifier of the Social Network</inlineHelpText>
        <label>SN Unique Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_Unique_Name__c</fullName>
        <label>SN Unique Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SocialMediaSettings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Id__c</columns>
        <columns>Country__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>SN_Type__c</columns>
        <columns>SN_Unique_Id__c</columns>
        <columns>SN_Unique_Name__c</columns>
        <columns>Language__c</columns>
        <columns>Language_Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pampers_Facebook</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Id__c</columns>
        <columns>Country__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>SN_Type__c</columns>
        <columns>SN_Unique_Id__c</columns>
        <columns>SN_Unique_Name__c</columns>
        <columns>Language__c</columns>
        <columns>Language_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Pampers</value>
        </filters>
        <filters>
            <field>SN_Type__c</field>
            <operation>equals</operation>
            <value>Facebook</value>
        </filters>
        <label>Pampers Facebook</label>
        <language>en_US</language>
    </listViews>
</CustomObject>